unpackaged/main/default/objects/Freight_Item__c/Freight_Item__c.object-meta.xml
<CustomObject>
    <label>Freight Item</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freight Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>