unpackaged/main/default/objects/Freight_Item__c/fields/Crated_Weight__c.field-meta.xml
<CustomField>
    <fullName>Crated_Weight__c</fullName>
    <label>Crated Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>