unpackaged/main/default/objects/Freight_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carpets</fullName>
            </value>
            <value>
                <fullName>Cartons (Cardboard)</fullName>
            </value>
            <value>
                <fullName>Crates (Wooden)</fullName>
            </value>
            <value>
                <fullName>Fiber Cases/Trunks</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Padded Display</fullName>
            </value>
            <value>
                <fullName>Skids/Pallets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>