unpackaged/main/default/objects/Freight_Item__c/fields/Hazardous_Material__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazardous Material</label>
    <type>Checkbox</type>
</CustomField>