unpackaged/main/default/objects/Freight_Item__c/validationRules/Freight_Item_Height_Positive_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_Item_Height_Positive_Integer</fullName>
    <active>true</active>
    <description>Height field must must be greater than 0.</description>
    <errorConditionFormula>Height__c &lt;= 0</errorConditionFormula>
    <errorMessage>Height must be greater than 0.</errorMessage>
</ValidationRule>