unpackaged/main/default/objects/Freight_Item__c/validationRules/Freight_Item_Length_Positive_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_Item_Length_Positive_Integer</fullName>
    <active>true</active>
    <description>Length field must must be greater than 0.</description>
    <errorConditionFormula>Length__c &lt;= 0</errorConditionFormula>
    <errorMessage>Length must be greater than 0.</errorMessage>
</ValidationRule>