unpackaged/main/default/objects/Freight_Item__c/validationRules/Freight_Item_Quantity_Positive_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_Item_Quantity_Positive_Integer</fullName>
    <active>true</active>
    <description>Quantity field must be greater than 0.</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>Quantity must be greater than 0</errorMessage>
</ValidationRule>