unpackaged/main/default/objects/Freight_Item__c/validationRules/Freight_Item_Weight_Positive_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_Item_Weight_Positive_Integer</fullName>
    <active>true</active>
    <description>Crated Weight must must be greater than 0.</description>
    <errorConditionFormula>Crated_Weight__c &lt;= 0</errorConditionFormula>
    <errorMessage>Crated Weight must be greater than 0.</errorMessage>
</ValidationRule>