unpackaged/main/default/objects/Freight_Item__c/validationRules/Freight_Item_Width_Positive_Integer.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_Item_Width_Positive_Integer</fullName>
    <active>true</active>
    <description>Width field must must be greater than 0.</description>
    <errorConditionFormula>Width__c &lt;= 0</errorConditionFormula>
    <errorMessage>Width must be greater than 0.</errorMessage>
</ValidationRule>